# labelizer

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
config/: parameters.json
doc/: README.md  doxy.cfg
include/labelizer/: labelizer_form.ui  labelizer_plugin.hpp  mouse_q_scene.hpp
python/: Licence.txt  google-images-download.py
src/labelizer/: labelizer_form.ui  labelizer_plugin.cpp  mouse_q_scene.cpp
